# voicegen

./: .gitignore  README.md  pyproject.toml  requirements.txt  texts_en.toml
src/voicegen/: __main__.py  cli.py
